fix keyboard spacing on contact page

--- a/src/Contact/Contact.scss
+++ b/src/Contact/Contact.scss
@@ -1,10 +1,12 @@
 @import '../index.scss';
 .contact-container {
   font-family: 'Lato', sans-serif;
+  height: 90vh;
   .header {
     display: flex;
     flex-direction: column;
     padding-left: 6vw;
+    height: 17vh;
     .title {
       font-size: 33px;
       font-family: 'Ubuntu', sans-serif;
@@ -19,7 +21,7 @@
   }
 
   .form-container {
-    width: 100%;
+    width: 100vw;
     height: 50vh;
     display: flex;
     justify-content: space-evenly;
@@ -35,90 +37,74 @@
       display: flex;
       justify-content: space-evenly;
     }
-    .name-input,
-    .email-input,
-    .subject-input,
-    .message-input {
-      height: 7vh;
-      width: 40vw;
-      background-color: #f2f2f2;
-      border-style: none;
-      border-left: $light-green 4px solid;
-      border-radius: 0px 5px 5px 0px;
-      font-size: 20px;
-      word-wrap: break-word;
-    }
 
-    .name-input,
-    .email-input {
-      .name,
-      .email {
-        background-color: #f2f2f2;
-        border-style: none;
-        padding: 1.5vh;
-        width: 100%;
-        font-size: 20px;
-      }
-    }
-    .subject-input {
-      height: 7vh;
-      width: 86.5vw;
-      .subject {
-        background-color: #f2f2f2;
-        border-style: none;
-        padding: 1.5vh;
-        width: 100%;
-        font-size: 20px;
-      }
-    }
-    .message-input {
-      width: 86.5vw;
-      height: 20vh;
-      .message {
-        background-color: #f2f2f2;
-        border-style: none;
-        font-size: 20px;
-        padding: 1.5vh;
-        word-wrap: break-word;
-        width: 100%;
-        height: 20vh;
-      }
-    }
-    .name::placeholder,
-    .email::placeholder,
-    .subject::placeholder,
-    .message::placeholder {
-      color: black;
-      font-weight: 300;
+    .name,
+    .email {
+      background-color: #f2f2f2;
+      padding: 1.5vh;
+      width: 40vw;
+      font-size: 20px;
     }
   }
-  .send-container {
-    width: 100vw;
-    padding-left: 6vw;
+
+  .subject {
+    height: 7vh;
+    width: 86.5vw;
+    background-color: #f2f2f2;
+    padding: 1.5vh;
+    font-size: 20px;
   }
-  .footer {
+  .message {
+    width: 86.5vw;
+    height: 20vh;
+    background-color: #f2f2f2;
+    font-size: 20px;
+    padding: 1.5vh;
+    word-wrap: break-word;
+  }
+  .name::placeholder,
+  .email::placeholder,
+  .subject::placeholder,
+  .message::placeholder {
+    color: black;
+    font-weight: 300;
+  }
+}
+.send-container {
+  width: 100vw;
+  padding-left: 6vw;
+}
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 17vh;
+  padding-top: 3vh;
+  .icon-container {
     display: flex;
-    justify-content: center;
+    width: 70%;
+    height: 15vh;
+    justify-content: space-evenly;
     align-items: center;
-    width: 100%;
-    height: 23vh;
-    padding-top: 3vh;
-    .icon-container {
-      display: flex;
-      width: 70%;
-      height: 15vh;
-      justify-content: space-evenly;
-      align-items: center;
-      .fab,
-      .fas {
-        transform: scale(2.2, 2.2);
-      }
-      a {
-        color: #505050;
-      }
-      a:hover {
-        color: $light-green;
-      }
+    .fab,
+    .fas {
+      transform: scale(2.2, 2.2);
+    }
+    a {
+      color: #505050;
+    }
+    a:hover {
+      color: $light-green;
     }
   }
+}
+
+.name,
+.email,
+.subject,
+.message {
+  border-style: none;
+  border-radius: 0px 5px 5px 0px;
+  border-left: $light-green 4px solid;
 }
